# pkg

./: .gitignore  configure.ac
libpkg/: libpkg.ver  pkg.h.in  pkg_config.c
libpkg/private/: pkg.h
libpkg/repo/linux_deb/: Makefile  Makefile.am  add.c  common.c  fetch.c  init.c  linux_deb.c  linux_deb.h  linux_deb_private.h  pkg_linux_deb_version_cmp.c  query.c  update.c  util.c  util.h
libpkg/repo/linux_deb/scripts/: get_debian_gpg_keys.sh
